[gd_scene load_steps=25 format=3 uid="uid://smi13sggafqw"]

[ext_resource type="Script" path="res://scripts/passcodeEntry.gd" id="1_4011o"]
[ext_resource type="Script" path="res://scripts/globalInformation.gd" id="1_rukca"]
[ext_resource type="Shader" path="res://scripts/shaders/noise.gdshader" id="2_bbpvo"]
[ext_resource type="Texture2D" uid="uid://dop5qc3hs6b7w" path="res://assets/2d/passcode/backgroundNoise.png" id="3_7dh4e"]
[ext_resource type="Texture2D" uid="uid://b4aou88ymwt8c" path="res://assets/2d/passcode/button1.png" id="4_id26b"]
[ext_resource type="Texture2D" uid="uid://csahwxuvkgpi5" path="res://assets/2d/passcode/button2.png" id="5_7eqtp"]
[ext_resource type="Texture2D" uid="uid://dchqi0so27bga" path="res://assets/2d/passcode/button3.png" id="6_551fu"]
[ext_resource type="PackedScene" uid="uid://g15p8sneaum5" path="res://objects/interaction2D.tscn" id="6_f3a7o"]
[ext_resource type="Texture2D" uid="uid://dih72l8nxwbjr" path="res://assets/2d/passcode/button4.png" id="7_i30e5"]
[ext_resource type="Texture2D" uid="uid://d0c42gw7356cf" path="res://assets/2d/passcode/button5.png" id="8_lkhb6"]
[ext_resource type="Texture2D" uid="uid://btpljc25hpnga" path="res://assets/2d/passcode/button6.png" id="9_on8rk"]
[ext_resource type="Texture2D" uid="uid://cmmu88likl0l3" path="res://assets/2d/passcode/button7.png" id="10_vte2y"]
[ext_resource type="Texture2D" uid="uid://3jkisxvrs5lt" path="res://assets/2d/passcode/button8.png" id="11_uimf0"]
[ext_resource type="Texture2D" uid="uid://dyj0wb5wavk6m" path="res://assets/2d/passcode/button9.png" id="12_4nh6a"]
[ext_resource type="Texture2D" uid="uid://bncijjps0d7du" path="res://assets/2d/passcode/quitButton.png" id="13_rl7gc"]
[ext_resource type="Texture2D" uid="uid://b8og4d1ipbg3i" path="res://assets/2d/passcode/button0.png" id="14_7trqs"]
[ext_resource type="Texture2D" uid="uid://dhbxv28wumo4r" path="res://assets/2d/UI/mousePointer.png" id="16_iven8"]
[ext_resource type="Texture2D" uid="uid://1ybrvdjx2poq" path="res://assets/2d/UI/mouseInteract.png" id="17_l6t5q"]
[ext_resource type="Texture2D" uid="uid://cfe408ssq7x8y" path="res://assets/2d/passcode/reloadButton.png" id="17_ulqad"]
[ext_resource type="FontFile" uid="uid://bswpuie5guqmd" path="res://assets/fonts/SourceCodePro-VariableFont_wght.ttf" id="18_leebo"]
[ext_resource type="AudioStream" uid="uid://b87cl0r6qxkub" path="res://assets/audio/sfx/menus/pop.ogg" id="21_6bre3"]
[ext_resource type="AudioStream" uid="uid://bg527jkj4wdce" path="res://assets/audio/sfx/menus/confirmation.mp3" id="22_t0aqo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ou234"]
shader = ExtResource("2_bbpvo")
shader_parameter/resolution = Vector2(128, 128)
shader_parameter/noise = 0.193
shader_parameter/distort = 1.0
shader_parameter/offset = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fd8tl"]
size = Vector2(123.333, 123.333)

[node name="passcodeEntry" type="Node2D"]
script = ExtResource("1_4011o")

[node name="globalInformation" type="Node" parent="."]
script = ExtResource("1_rukca")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(593, 379)
rotation = -1.57079
ignore_rotation = false
zoom = Vector2(0.75, 1)

[node name="backdrop" type="Sprite2D" parent="."]
modulate = Color(0.117647, 0.262745, 1, 1)
material = SubResource("ShaderMaterial_ou234")
position = Vector2(743.5, 376.5)
scale = Vector2(1.19141, 1.58203)
texture = ExtResource("3_7dh4e")

[node name="b0" type="Sprite2D" parent="."]
position = Vector2(742.4, 535.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("14_7trqs")

[node name="interact" parent="b0" instance=ExtResource("6_f3a7o")]
interactionName = "0"

[node name="hitbox" type="CollisionShape2D" parent="b0/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b1" type="Sprite2D" parent="."]
position = Vector2(646.4, 247.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_id26b")

[node name="interact" parent="b1" instance=ExtResource("6_f3a7o")]
visible = false
interactionName = "1"

[node name="hitbox" type="CollisionShape2D" parent="b1/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b2" type="Sprite2D" parent="."]
position = Vector2(742.4, 247.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_7eqtp")

[node name="interact" parent="b2" instance=ExtResource("6_f3a7o")]
interactionName = "2"

[node name="hitbox" type="CollisionShape2D" parent="b2/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b3" type="Sprite2D" parent="."]
position = Vector2(838.4, 247.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_551fu")

[node name="interact" parent="b3" instance=ExtResource("6_f3a7o")]
interactionName = "3"

[node name="hitbox" type="CollisionShape2D" parent="b3/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b4" type="Sprite2D" parent="."]
position = Vector2(646.4, 343.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_i30e5")

[node name="interact" parent="b4" instance=ExtResource("6_f3a7o")]
interactionName = "4"

[node name="hitbox" type="CollisionShape2D" parent="b4/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b5" type="Sprite2D" parent="."]
position = Vector2(742.4, 343.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("8_lkhb6")

[node name="interact" parent="b5" instance=ExtResource("6_f3a7o")]
interactionName = "5"

[node name="hitbox" type="CollisionShape2D" parent="b5/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b6" type="Sprite2D" parent="."]
position = Vector2(838.4, 343.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("9_on8rk")

[node name="interact" parent="b6" instance=ExtResource("6_f3a7o")]
interactionName = "6"

[node name="hitbox" type="CollisionShape2D" parent="b6/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b7" type="Sprite2D" parent="."]
position = Vector2(646.4, 439.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_vte2y")

[node name="interact" parent="b7" instance=ExtResource("6_f3a7o")]
interactionName = "7"

[node name="hitbox" type="CollisionShape2D" parent="b7/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b8" type="Sprite2D" parent="."]
position = Vector2(742.4, 439.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_uimf0")

[node name="interact" parent="b8" instance=ExtResource("6_f3a7o")]
interactionName = "8"

[node name="hitbox" type="CollisionShape2D" parent="b8/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="b9" type="Sprite2D" parent="."]
position = Vector2(838.4, 439.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("12_4nh6a")

[node name="interact" parent="b9" instance=ExtResource("6_f3a7o")]
interactionName = "9"

[node name="hitbox" type="CollisionShape2D" parent="b9/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="cancelButton" type="Sprite2D" parent="."]
position = Vector2(646.4, 535.4)
scale = Vector2(0.6, 0.6)
texture = ExtResource("13_rl7gc")

[node name="interact" parent="cancelButton" instance=ExtResource("6_f3a7o")]
visible = false
interactionName = "quit"

[node name="hitbox" type="CollisionShape2D" parent="cancelButton/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="reloadButton" type="Sprite2D" parent="."]
position = Vector2(839, 535)
scale = Vector2(0.6, 0.6)
texture = ExtResource("17_ulqad")

[node name="interact" parent="reloadButton" instance=ExtResource("6_f3a7o")]
visible = false
interactionName = "reload"

[node name="hitbox" type="CollisionShape2D" parent="reloadButton/interact"]
position = Vector2(-0.666748, -0.666656)
shape = SubResource("RectangleShape2D_fd8tl")

[node name="passcodeNumbers" type="Label" parent="."]
offset_left = 593.0
offset_top = 172.0
offset_right = 1805.0
offset_bottom = 336.0
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0, 0.792157, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.909804, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("18_leebo")
theme_override_font_sizes/font_size = 128
horizontal_alignment = 1

[node name="mouse" type="Node2D" parent="."]
z_index = 10
position = Vector2(829, 504)

[node name="mousePointer" type="Sprite2D" parent="mouse"]
position = Vector2(6, 6)
scale = Vector2(0.1, 0.1)
texture = ExtResource("16_iven8")

[node name="mouseInteract" type="Sprite2D" parent="mouse"]
visible = false
position = Vector2(3, 8)
scale = Vector2(0.2, 0.2)
texture = ExtResource("17_l6t5q")

[node name="pointerRay" type="RayCast2D" parent="mouse"]
position = Vector2(1, 1)
rotation = 2.35619
scale = Vector2(0.1, 0.1)
target_position = Vector2(0, 15)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="boundaryNW" type="Node2D" parent="."]
position = Vector2(592, 176)

[node name="boundarySE" type="Node2D" parent="."]
position = Vector2(896, 576)

[node name="buttonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_6bre3")
pitch_scale = 0.5

[node name="confirmationSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_t0aqo")
